[package]
name = "getlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.4", default-features = true }
ethers = {  version = "2.0",features = ["abigen", "ws", "rustls", "ethers-solc"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
eyre = "0.6"
mysql = "*"
futures = { version = "0.3.28", default-features = true, features = ["std"] }
mysql_async = "0.32.2"

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]