[package]
name = "modtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive", "cargo"] }
clap-port-flag ={version = "0.4.0"}
tokio = { version = "1.21.0", features = ["macros", "net", "rt-multi-thread"] }
futures = "0.3.24"
hyper = { version = "0.14.27", features = ["server", "http1","http2"] }
